Updated TODO and bumped VERSION

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 Todo:
     
     1. Wrap everything in namespace
-    2. Add explicit argument-querying functions
+X   2. Add explicit argument-querying functions
